--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "typescript": "^4.3.5",
     "vite": "^2.4.3",
     "vue": "^3.1.5",
-    "vue-router": "4"
+    "vue-router": "4",
+    "picomatch": "^2.3.0"
   },
   "build": {
     "asar": true,
@@ -89,6 +90,7 @@
     "@vicons/ionicons5": "^0.11.0",
     "@vueuse/core": "^7.0.3",
     "naive-ui": "^2.21.1",
-    "picomatch": "^2.3.0"
+    "prismjs": "^1.25.0",
+    "vue-prism-editor": "^2.0.0-alpha.2"
   }
 }
