--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "electron-builder": "^22.11.7",
     "electron-devtools-installer": "^3.2.0",
     "multispinner": "^0.2.1",
+    "picomatch": "^2.3.0",
     "portfinder": "^1.0.28",
     "rollup": "^2.53.3",
     "rollup-plugin-esbuild": "^4.5.0",
@@ -39,8 +40,7 @@
     "typescript": "^4.3.5",
     "vite": "^2.4.3",
     "vue": "^3.1.5",
-    "vue-router": "4",
-    "picomatch": "^2.3.0"
+    "vue-router": "4"
   },
   "build": {
     "asar": true,
@@ -91,6 +91,7 @@
     "@vueuse/core": "^7.0.3",
     "naive-ui": "^2.21.1",
     "prismjs": "^1.25.0",
-    "vue-prism-editor": "^2.0.0-alpha.2"
+    "vue-prism-editor": "^2.0.0-alpha.2",
+    "ws": "^8.3.0"
   }
 }
